syntax = "proto3";

package ynpb;

option go_package = "github.com/yanet-platform/yanet2/controlplane/ynpb;ynpb";

service CountersService {
	// Inspect retrieves the current configuration state.
	rpc Pipeline(PipelineCountersRequest) returns (CountersResponse) {
	}
	rpc Module(ModuleCountersRequest) returns (CountersResponse) {
	}
}

message PipelineCountersRequest {
	// Dataplane instance
	uint32 dp_instance = 1;
	string device = 2;
	string pipeline = 3;
}

message ModuleCountersRequest {
	// Dataplane instance
	uint32 dp_instance = 1;
	string device = 2;
	string pipeline = 3;
	string function = 4;
	string chain = 5;
	string module_type = 6;
	string module_name = 7;
}

message CounterInstanceInfo {
	repeated uint64 values = 1;
}

message CounterInfo {
	string name = 1;
	repeated CounterInstanceInfo instances = 2;
}

message CountersResponse {
	repeated CounterInfo counters = 1;
}
